--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     implementation 'com.orhanobut:logger:2.2.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'com.yarolegovich:lovely-dialog:1.1.0'
 }
